[package]
name = "basic-axum-rate-limit"
version = "0.1.0"
edition = "2021"
authors = ["Grant DeFayette"]
license = "GPL-3.0-or-later"
description = "Simple rate limiting middleware for Axum with callback-based extensibility"
repository = "https://github.com/grantdefayette/personal-site"
keywords = ["axum", "rate-limit", "middleware", "web"]
categories = ["web-programming", "network-programming"]

[dependencies]
axum = "0.8.6"
dashmap = "6.1.0"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.48.0", features = ["sync", "time"] }
tracing = "0.1.41"
async-trait = "0.1.89"
regex = "1.12.2"
tower = "0.5.2"
prometheus = { version = "0.13", optional = true }
lazy_static = { version = "1.5", optional = true }

[features]
default = []
metrics = ["prometheus", "lazy_static"]
